--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,20 @@
 {
-    "extends": "airbnb-base"
+    "extends": "airbnb-base",
+    
+    "rules": {
+        "indent": [2, "tab"],
+        "space-before-function-paren": [2, "never"],
+        "func-names": 0,
+        "max-len": [1, {"code": 160}],
+        "no-restricted-syntax": 0,
+        "no-tabs": 0,
+        "linebreak-style": 0,
+        "comma-dangle": ["error", {
+            "arrays": "always-multiline",
+            "objects": "always-multiline",
+            "imports": "always-multiline",
+            "exports": "always-multiline",
+            "functions": "ignore"
+        }]
+    }
 }
